use different help out page

--- a/help-out.html
+++ b/help-out.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#side-navigation" data-offset="70">
 
 <!-- Body Wrapper -->
 <div id="body-wrapper" class="animsition">
@@ -53,7 +53,7 @@
                         <ul id="nav-main" class="nav nav-main">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="learn-more.html">Restaurants: Learn More</a></li>
-                            <li class="selected"><a href="invite-restaurant.html">Diners: Help Out</a></li>
+                            <li class="selected"><a href="help-out.html">Diners: Help Out</a></li>
                             <li><a href="sample-page.html">Sample</a></li>
                         </ul>
                     </nav>
@@ -74,7 +74,7 @@
 
         <div class="module module-nav-toggle">
             <a href="#" id="nav-toggle" data-toggle="panel-mobile"><span></span><span></span><span></span><span></span></a>
-        </div>    
+        </div>
 
         <div class="module module-logo">
             <img src="assets/img/logo-horizontal-dark.svg" alt="">
@@ -89,10 +89,11 @@
     <div id="content">
 
         <!-- Page Title -->
-        <div class="page-title border-top">
+        <div class="page-title bg-light">
+            <div class="bg-image bg-parallax"><img src="assets/img/photos/bg-desk.jpg" alt=""></div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-7 push-lg-5">
+                    <div class="col-lg-8 push-lg-4">
                         <h1 class="mb-0">Help Out</h1>
                         <h4 class="text-muted mb-0">Support your favorite places and feed front line health care workers </h4>
                     </div>
@@ -101,43 +102,88 @@
         </div>
 
         <!-- Section -->
-        <section class="section section-bg-edge">
+        <section class="section">
 
-            <div class="image left bottom col-md-7">
-                <div class="bg-image"><img src="assets/img/photos/bg-chef.jpg" alt=""></div>
-            </div>
-        
             <div class="container">
-                <div class="col-lg-5 push-lg-5 col-md-9 push-md-3">
-                    <h2>How to tell your favorite restaurant</h2>
-                    <p>Donec a eros metus. Vivamus volutpat leo dictum risus ullamcorper condimentum. Cras sollicitudin varius condimentum. Praesent a dolor sem....</p>
-                    <p>Nam eleifend elementum sapien et bibendum. Nunc ac diam efficitur, ultrices lorem quis, consectetur odio.</p>
-                    <h2>Benefits for restaurants</h2>
-                    <p>Donec a eros metus. Vivamus volutpat leo dictum risus ullamcorper condimentum. Cras sollicitudin varius condimentum. Praesent a dolor sem....</p>
-                    <h2>How you can help</h2>
-                    <p>Donec a eros metus. Vivamus volutpat leo dictum risus ullamcorper condimentum. Cras sollicitudin varius condimentum. Praesent a dolor sem....</p>
-                    <p>Nam eleifend elementum sapien et bibendum. Nunc ac diam efficitur, ultrices lorem quis, consectetur odio.</p>
-                    <h2>Do you like ice cream?</h2>
-                    <p>Donec a eros metus. Vivamus volutpat leo dictum risus ullamcorper condimentum. Cras sollicitudin varius condimentum. Praesent a dolor sem....</p>
-                    <a href="#" class="btn btn-outline-primary"><span>Is this a button?</span></a>
-                    <a href="#" class="btn btn-outline-secondary"><span>Definitely, yes.</span></a>
-                </div>
-            </div>
-
-        </section>
-
-        <!-- Section -->
-        <section class="section section-lg dark bg-dark">
-
-            <!-- BG Image -->
-            <div class="bg-image bg-parallax"><img src="assets/img/photos/bg-croissant.jpg" alt=""></div>
-        
-            <div class="container text-center">
-                <div class="col-lg-8 push-lg-2">
-                    <h2 class="mb-3">Would you like to visit Us?</h2>
-                    <h5 class="text-muted">Book a table even right now or make an online order!</h5>
-                    <a href="menu-list-navigation.html" class="btn btn-primary"><span>Order Online</span></a>
-                    <a href="book-a-table.html" class="btn btn-outline-primary"><span>Book a table</span></a>
+                <div class="row">
+                    <div class="col-md-3">
+                        <!-- Side Navigation -->
+                        <nav id="side-navigation" class="stick-to-content pt-4" data-local-scroll>
+                            <ul class="nav nav-vertical">
+                                <li class="nav-item">
+                                    <a href="#how" class="nav-link">How You Can Help:</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#invite" class="nav-link"><i class="ti ti-comments-smiley mr-2 text-primary"></i> Invite</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#purchase" class="nav-link"><i class="ti ti-shopping-cart mr-2 text-primary"></i> Purchase</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#share" class="nav-link"><i class="ti ti-sharethis mr-2 text-primary"></i> Share</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="col-md-8 push-md-1">
+                        <div id="how">
+                            <h3>How Can You Help?</h3>
+                            <hr>
+                            <div id="faq1_1" class="pb-5">
+                                <h4>Invite, Purchase, Share</h4>
+                                <ol>
+                                    <li class="lead">
+                                        <strong>Invite</strong> your favorite restaurants to participate.
+                                    </li>
+                                    <li class="lead">
+                                        <strong>Purchase</strong> meals for healthcare workers.
+                                    </li>
+                                    <li class="lead">
+                                        <strong>Share</strong> the opportunity with your community to make more impact.
+                                    </li>
+                                <ol>
+                            </div>
+                        </div>
+                        <div id="invite">
+                            <h3><i class="ti ti-comments-smiley mr-4 text-primary"></i>Invite</h3>
+                            <hr>
+                            <div id="faq2_1" class="pb-5">
+                                <h4>Invite Your Favorite Restaurants To Participate</h4>
+                                <p class-"lead">
+                                    Let your favorite restaurants know you care about their future. Reach out to them via e-mail, phone numbers, or social media handles (#shelter-in-plates #sip).
+                                </p>
+                                <p class="lead">
+                                    Need help reaching out to them? Use one of these templates or send an email to <a href=mailto:"eric@shelter-in-plates.com">eric@shelter-in-plates.com</a> and we will do it for you.
+                                </p>
+                            </div>
+                        </div>
+                        <div id="purchase">
+                            <h3><i class="ti ti-shopping-cart mr-4 text-primary"></i>Purchase</h3>
+                            <hr>
+                            <div id="faq3_1" class="pb-5">
+                                <h4>Purchase Meals For Healthcare Workers</h4>
+                                <p class-"lead">
+                                    You can select to purchase meals from <a href="#">any participating restaurant here</a>! Just select how many you would like to purchase, add a personal note to the restaurant and health care workers, and we will take care of the rest.
+                                </p>
+                                <p class="lead">
+                                    We will let you know when your order is received and when it is delivered to a local hospital in the next few days.
+                                </p>
+                            </div>
+                        </div>
+                        <div id="share">
+                            <h3><i class="ti ti-sharethis mr-4 text-primary"></i>Share</h3>
+                            <hr>
+                            <div id="faq3_1" class="pb-5">
+                                <h4>Share the opportunity with your community to make more impact</h4>
+                                <p class-"lead">
+                                    At a time like this, we find power in uniting efforts across our communities. The more meals purchased, the more restaurants receive business, and the more health care workers stay nourished by you. 
+                                </p>
+                                <p class="lead">
+                                    Encourage your friends, family, neighbors, and co-workers to join in our movement. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
