--- a/sample-page.html
+++ b/sample-page.html
@@ -53,7 +53,7 @@
                         <ul id="nav-main" class="nav nav-main">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="learn-more.html">Restaurants: Learn More</a></li>
-                            <li><a href="invite-restaurant.html">Diners: Help Out</a></li>
+                            <li><a href="help-out.html">Diners: Help Out</a></li>
                             <li class="selected"><a href="sample-page.html">Sample</a></li>
                         </ul>
                     </nav>
