--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <ul id="nav-main" class="nav nav-main">
                             <li class="selected"><a href="index.html">Home</a></li>
                             <li><a href="learn-more.html">Restaurants: Learn More</a></li>
-                            <li><a href="invite-restaurant.html">Diners: Help Out</a></li>
+                            <li><a href="help-out.html">Diners: Help Out</a></li>
                             <li><a href="sample-page.html">Sample</a></li>
                         </ul>
                     </nav>
