use consistent copy

--- a/help-out.html
+++ b/help-out.html
@@ -111,7 +111,7 @@
                         <nav id="side-navigation" class="stick-to-content pt-4" data-local-scroll>
                             <ul class="nav nav-vertical">
                                 <li class="nav-item">
-                                    <a href="#how" class="nav-link">How You Can Help:</a>
+                                    <a href="#how" class="nav-link">How Can You Help?</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#invite" class="nav-link"><i class="ti ti-comments-smiley mr-2 text-primary"></i> Invite</a>
