--- a/help-out.html
+++ b/help-out.html
@@ -149,7 +149,7 @@
                             <hr>
                             <div id="faq2_1" class="pb-5">
                                 <h4>Invite Your Favorite Restaurants To Participate</h4>
-                                <p class-"lead">
+                                <p class="lead">
                                     Let your favorite restaurants know you care about their future. Reach out to them via e-mail, phone numbers, or social media handles (#shelter-in-plates #sip).
                                 </p>
                                 <p class="lead">
@@ -162,7 +162,7 @@
                             <hr>
                             <div id="faq3_1" class="pb-5">
                                 <h4>Purchase Meals For Healthcare Workers</h4>
-                                <p class-"lead">
+                                <p class="lead">
                                     You can select to purchase meals from <a href="#">any participating restaurant here</a>! Just select how many you would like to purchase, add a personal note to the restaurant and health care workers, and we will take care of the rest.
                                 </p>
                                 <p class="lead">
@@ -175,7 +175,7 @@
                             <hr>
                             <div id="faq3_1" class="pb-5">
                                 <h4>Share the opportunity with your community to make more impact</h4>
-                                <p class-"lead">
+                                <p class="lead">
                                     At a time like this, we find power in uniting efforts across our communities. The more meals purchased, the more restaurants receive business, and the more health care workers stay nourished by you. 
                                 </p>
                                 <p class="lead">
