use melodie copy for restaurant page

--- a/learn-more.html
+++ b/learn-more.html
@@ -109,73 +109,75 @@
                     <div class="col-md-3">
                         <!-- Side Navigation -->
                         <nav id="side-navigation" class="stick-to-content pt-4" data-local-scroll>
-                            <h5 class="mb-3"><i class="ti ti-align-justify mr-3 text-muted"></i>Sections</h5>
                             <ul class="nav nav-vertical">
                                 <li class="nav-item">
-                                    <a href="#faq1" class="nav-link">General</a>
-                                    <ul>
-                                        <li class="nav-item"><a href="#faq1_1" class="nav-link">How does it work?</a></li>
-                                        <li class="nav-item"><a href="#faq1_2" class="nav-link">How long does it take?</a></li>
-                                    </ul>
+                                    <a href="#how" class="nav-link">How Does It Work?</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#faq2" class="nav-link">Delivery</a>
-                                    <ul>
-                                        <li class="nav-item"><a href="#faq2_1" class="nav-link">How does it work?</a></li>
-                                        <li class="nav-item"><a href="#faq2_2" class="nav-link">How long does it take?</a></li>
-                                    </ul>
+                                    <a href="#invite" class="nav-link"><i class="ti ti-pencil-alt mr-2 text-primary"></i> Sign Up</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#faq3" class="nav-link">Payments</a>
-                                    <ul>
-                                        <li class="nav-item"><a href="#faq3_1" class="nav-link">How does it work?</a></li>
-                                        <li class="nav-item"><a href="#faq3_2" class="nav-link">How long does it take?</a></li>
-                                    </ul>
+                                    <a href="#purchase" class="nav-link"><i class="ti ti-shopping-cart mr-2 text-primary"></i> Order Handling &amp; Payment</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#share" class="nav-link"><i class="ti ti-truck mr-2 text-primary"></i> Delivery</a>
                                 </li>
                             </ul>
                         </nav>
                     </div>
                     <div class="col-md-8 push-md-1">
-                        <div id="faq1">
-                            <h3><i class="ti ti-file mr-4 text-primary"></i>General info</h3>
+                        <div id="how">
+                            <h3>How Does It Work?</h3>
                             <hr>
                             <div id="faq1_1" class="pb-5">
-                                <h4>How does it work?</h4>
-                                <p class="lead">Vivamus non euismod dui. Curabitur rhoncus massa sit amet nisi molestie lobortis. Nam quis neque nec odio vestibulum pulvinar sit amet sed enim.</p>
-                                <p>Sed lacus lacus, tincidunt a posuere sed, varius ut sapien. Vivamus nulla odio, scelerisque eu orci ut, tincidunt consequat ligula. Etiam ante felis, consequat vel accumsan vitae, gravida nec mauris. Maecenas vitae lobortis nisl. Donec lorem libero, vulputate sed arcu nec, sollicitudin vestibulum nisi.</p>
-                            </div>
-                            <div id="faq1_2" class="pb-5">
-                                <h4>How long does it take?</h4>
-                                <p class="lead">Vivamus non euismod dui. Curabitur rhoncus massa sit amet nisi molestie lobortis. Nam quis neque nec odio vestibulum pulvinar sit amet sed enim.</p>
-                                <p> Vivamus nulla odio, scelerisque eu orci ut, tincidunt consequat ligula. Etiam ante felis, consequat vel accumsan vitae, gravida nec mauris. Maecenas vitae lobortis nisl. Donec lorem libero, vulputate sed arcu nec, sollicitudin vestibulum nisi.</p>
+                                <p class="lead">We want to make this as easy as possible for restaurants.</p>
+                                <ul>
+                                    <li>We will set up everything for you. We'll market to your customers on your behalf, collect payment, tell you how many meals you should prepare.</li>
+                                    <li>You batch orders, so they aren't "on demand" and we will deliver them for you.</li>
+                                    <li>This will cost you nothing - <strong>We charge no fees.</strong></li>
+                                </ul>
+                                <p class="lead">Read on for more details.</p>
                             </div>
                         </div>
-                        <div id="faq2">
-                            <h3><i class="ti ti-package mr-4 text-primary"></i>Delivery</h3>
+                        <div id="invite">
+                            <h3><i class="ti ti-pencil-alt mr-4 text-primary"></i>Sign Up</h3>
                             <hr>
                             <div id="faq2_1" class="pb-5">
-                                <h4>How does it work?</h4>
-                                <p class="lead">Vivamus non euismod dui. Curabitur rhoncus massa sit amet nisi molestie lobortis. Nam quis neque nec odio vestibulum pulvinar sit amet sed enim.</p>
-                                <p>Sed lacus lacus, tincidunt a posuere sed, varius ut sapien. Vivamus nulla odio, scelerisque eu orci ut, tincidunt consequat ligula. Etiam ante felis, consequat vel accumsan vitae, gravida nec mauris. Maecenas vitae lobortis nisl. Donec lorem libero, vulputate sed arcu nec, sollicitudin vestibulum nisi.</p>
-                            </div>
-                            <div id="faq2_2" class="pb-5">
-                                <h4>How long does it take?</h4>
-                                <p class="lead">Vivamus non euismod dui. Curabitur rhoncus massa sit amet nisi molestie lobortis. Nam quis neque nec odio vestibulum pulvinar sit amet sed enim.</p>
-                                <p> Vivamus nulla odio, scelerisque eu orci ut, tincidunt consequat ligula. Etiam ante felis, consequat vel accumsan vitae, gravida nec mauris. Maecenas vitae lobortis nisl. Donec lorem libero, vulputate sed arcu nec, sollicitudin vestibulum nisi.</p>
+                                <p class="lead">
+                                    Sign-Up via our <a href="#">simple intake form</a> or reach out directly to <a href="mailto:eric@shelter-in-plates.com">eric@shelter-in-plates.com</a> if that’s easier.
+                                </p>
+                                <p class="lead">
+                                    We know time is of the essence for you, and we don’t want to put you through extra processing. We’ll need the following to help you get started:
+                                </p>
+                                <ul>
+                                    <li>Any custom content you would like posted on your personalized page. For example, a letter to your diners, information about the meal you’ll prepare, a photo, etc.</li>
+                                    <li>Your price for an individual meal.</li>
+                                    <li>Your preferred method of contact to handle orders with us.</li>
+                                    <li>Your preferred method to receive digital payment from us.</li>
+                                </ul>
                             </div>
                         </div>
-                        <div id="faq3">
-                            <h3><i class="ti ti-wallet mr-4 text-primary"></i>Payments</h3>
+                        <div id="purchase">
+                            <h3><i class="ti ti-shopping-cart mr-4 text-primary"></i>Order Handling &amp; Payment</h3>
                             <hr>
                             <div id="faq3_1" class="pb-5">
-                                <h4>How does it work?</h4>
-                                <p class="lead">Vivamus non euismod dui. Curabitur rhoncus massa sit amet nisi molestie lobortis. Nam quis neque nec odio vestibulum pulvinar sit amet sed enim.</p>
-                                <p>Sed lacus lacus, tincidunt a posuere sed, varius ut sapien. Vivamus nulla odio, scelerisque eu orci ut, tincidunt consequat ligula. Etiam ante felis, consequat vel accumsan vitae, gravida nec mauris. Maecenas vitae lobortis nisl. Donec lorem libero, vulputate sed arcu nec, sollicitudin vestibulum nisi.</p>
+                                <ul>
+                                    <li>We will compile orders for your restaurant at the end of each day and send them to you the following day.</li>
+                                    <li>Once you agree to fulfill the order, we will transfer the diner’s payment directly to you.</li>
+                                    <li>You will have 3 days to complete the order.</li>
+                                    <li>We will help you track the running total of orders pending and completed for you as we move forward together.</li>
+                                </ul>
                             </div>
-                            <div id="faq3_2" class="pb-5">
-                                <h4>How long does it take?</h4>
-                                <p class="lead">Vivamus non euismod dui. Curabitur rhoncus massa sit amet nisi molestie lobortis. Nam quis neque nec odio vestibulum pulvinar sit amet sed enim.</p>
-                                <p> Vivamus nulla odio, scelerisque eu orci ut, tincidunt consequat ligula. Etiam ante felis, consequat vel accumsan vitae, gravida nec mauris. Maecenas vitae lobortis nisl. Donec lorem libero, vulputate sed arcu nec, sollicitudin vestibulum nisi.</p>
+                        </div>
+                        <div id="share">
+                            <h3><i class="ti ti-truck mr-4 text-primary"></i>Delivery</h3>
+                            <hr>
+                            <div id="faq3_1" class="pb-5">
+                                <ul>
+                                    <li>When we send the order we will include the local hospital that is expecting the delivery.</li>
+                                    <li>If you are able to deliver the order yourself, that’s great!</li>
+                                    <li>If you need help with delivery, we will arrange a courier to pick up the order at an agreed upon time.</li>
+                                <ul>
                             </div>
                         </div>
                     </div>
