intake form link

--- a/learn-more.html
+++ b/learn-more.html
@@ -144,7 +144,7 @@
                             <hr>
                             <div id="faq2_1" class="pb-5">
                                 <p class="lead">
-                                    Sign-Up via our <a href="#">simple intake form</a> or reach out directly to <a href="mailto:eric@shelter-in-plates.com">eric@shelter-in-plates.com</a> if that’s easier.
+                                    Sign-Up via our <a href="https://shelter-in-plates.typeform.com/to/EENdAG" target="_blank">simple intake form</a> or reach out directly to <a href="mailto:eric@shelter-in-plates.com">eric@shelter-in-plates.com</a> if that’s easier.
                                 </p>
                                 <p class="lead">
                                     We know time is of the essence for you, and we don’t want to put you through extra processing. We’ll need the following to help you get started:
