connect typeform onboarding

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-md-2">
                     <div class="module right">
-                        <a href="#" class="btn btn-outline-secondary"><span>Join</span></a>
+                        <a href="https://shelter-in-plates.typeform.com/to/EENdAG" target="_blank" class="btn btn-outline-secondary"><span>Join</span></a>
                     </div>
                 </div>
             </div>
