--- a/learn-more.html
+++ b/learn-more.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="col-md-2">
                     <div class="module right">
-                        <a href="#" class="btn btn-outline-secondary"><span>Join</span></a>
+                        <a href="https://shelter-in-plates.typeform.com/to/EENdAG" target="_blank" class="btn btn-outline-secondary"><span>Join</span></a>
                     </div>
                 </div>
             </div>
@@ -179,6 +179,8 @@
                                     <li>If you need help with delivery, we will arrange a courier to pick up the order at an agreed upon time.</li>
                                 <ul>
                             </div>
+                            <p class="lead">It's free and we'll make it super easy for you.</p>
+                            <a href="https://shelter-in-plates.typeform.com/to/EENdAG" target="_blank" class="btn btn-outline-primary"><span>Sounds good. Sign me up!</span></a>
                         </div>
                     </div>
                 </div>
