connect sample page

--- a/sample-page.html
+++ b/sample-page.html
@@ -324,7 +324,7 @@ When making your purchase, please include a message for the hospital staff, your
           // https://stripe.com/docs/payments/checkout/fulfillment
           //successUrl: 'http://www.shelter-in-plates.com/sample-page.html',
           //cancelUrl: 'https://www.shelter-in-plates.com/sample-page.html',
-          successUrl: 'http://localhost:8082/sample-page.html',
+          successUrl: 'http://localhost:8082/confirmation.html',
           cancelUrl: 'http://localhost:8082/sample-page.html',
         }
 
