--- a/confirmation.html
+++ b/confirmation.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Title -->
-<title>Soup - Restaurant with Online Ordering System Template</title>
+<title>Shelter-In-Plates: Help keep local restaurants alive while supporting health care professionals</title>
 
 <!-- Favicons -->
 <link rel="shortcut icon" href="assets/img/favicon.png">
@@ -53,87 +53,13 @@
                     <!-- Navigation -->
                     <nav class="module module-navigation left mr-4">
                         <ul id="nav-main" class="nav nav-main">
-                            <li class="has-dropdown">
-                                <a href="#">Home</a>
-                                <div class="dropdown-container">
-                                    <ul>
-                                        <li><a href="index.html">Home Basic</a></li>
-                                        <li><a href="index-burgers.html">Home Burgers</a></li>
-                                        <li><a href="index-slider.html">Home Fullwidth Slider</a></li>
-                                        <li><a href="index-video.html">Home Video</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="has-dropdown">
-                                <a href="#">About</a>
-                                <div class="dropdown-container">
-                                    <ul class="dropdown-mega">
-                                        <li><a href="page-about.html">About Us</a></li>
-                                        <li><a href="page-services.html">Services</a></li>
-                                        <li><a href="page-gallery.html">Gallery</a></li>
-                                        <li><a href="page-reviews.html">Reviews</a></li>
-                                        <li><a href="page-faq.html">FAQ</a></li>
-                                    </ul>
-                                    <div class="dropdown-image">
-                                        <img src="assets/img/photos/dropdown-about.jpg" alt="">
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="has-dropdown">
-                                <a href="#">Menu</a>
-                                <div class="dropdown-container">
-                                    <ul>
-                                        <li class="has-dropdown">
-                                            <a href="#">List</a>
-                                            <ul>
-                                                <li><a href="menu-list-navigation.html">Navigation</a></li>
-                                                <li><a href="menu-list-collapse.html">Collapse</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="has-dropdown">
-                                            <a href="#">Grid</a>
-                                            <ul>
-                                                <li><a href="menu-grid-navigation.html">Navigation</a></li>
-                                                <li><a href="menu-grid-collapse.html">Collapse</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li><a href="page-offers.html">Offers</a></li>
-                            <li><a href="page-contact.html">Contact</a></li>
-                            <li class="has-dropdown">   
-                                <a href="#">More</a>
-                                <div class="dropdown-container">
-                                    <ul class="dropdown-mega">
-                                        <li><a href="page-offer-single.html">Offer single</a></li>
-                                        <li><a href="page-product.html">Product</a></li>
-                                        <li><a href="book-a-table.html">Book a table</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
-                                        <li><a href="confirmation.html">Confirmation</a></li>
-                                        <li><a href="blog.html">Blog</a></li>
-                                        <li><a href="blog-sidebar.html">Blog + Sidebar</a></li>
-                                        <li><a href="blog-post.html">Blog Post</a></li>
-                                        <li><a href="documentation.html">Documentation</a></li>
-                                    </ul>
-                                    <div class="dropdown-image">
-                                        <img src="assets/img/photos/dropdown-more.jpg" alt="">
-                                    </div>
-                                </div>
+                            <li>
+                                <a href="index.html">Learn More About Shelter-In-Plates</a>
                             </li>
                         </ul>
                     </nav>
-                    <div class="module left">
-                        <a href="menu-list-navigation.html" class="btn btn-outline-secondary"><span>Order</span></a>
-                    </div>
                 </div>
                 <div class="col-md-2">
-                    <a href="#" class="module module-cart right" data-toggle="panel-cart">
-                        <span class="cart-icon">
-                            <i class="ti ti-shopping-cart"></i>
-                            <span class="notification">2</span>
-                        </span>
-                        <span class="cart-value">$32.98</span>
                     </a>
                 </div>
             </div>
@@ -170,11 +96,17 @@
         <section class="section bg-light">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 push-lg-4">
-                        <span class="icon icon-xl icon-success"><i class="ti ti-check-box"></i></span>
-                        <h1 class="mb-2">Thank you for your order!</h1>
-                        <h4 class="text-muted mb-5">You will recieve it in 30 minutes.</h4>
-                        <a href="menu-list-navigation.html" class="btn btn-outline-secondary"><span>Go back to menu</span></a>
+                    <div class="col-lg-7 push-lg-3">
+                        <div class="text-center mb-2">
+                            <span class="icon icon-md icon-danger"><i class="ti ti-heart"></i></span>
+                            <h3>Thank you!</h3>
+                        </div>
+                        <p class="lead text-muted">Thank you so much for being a part of supporting both independent restaurants and our frontline healthcare workers!</p>
+                        <p class="lead text-muted">Your meal will be prepared and delivered to a local hospital in the coming days days.</p>
+                        <h3>What to expect next</h3>
+                        <p class="lead text-muted">After the meal is delivered, we will send you confirmation to let you know when and where it was delivered. If you have purchased a subscription, then you will be notified every time a meal is delivered. If you want to cancel at any time, please just email us at admin@shelter-in-plates.com.</p>
+                        <h3>How you can continue to help</h3>
+                        <p class="lead text-muted">Please share us with your friends on social media or ask others to join you in supporting restaurants and healthcare workers.</p>
                     </div>
                 </div>
             </div>
@@ -182,63 +114,18 @@
 
         <!-- Footer -->
         <footer id="footer" class="bg-dark dark">
-            
+
             <div class="container">
                 <!-- Footer 1st Row -->
-                <div class="footer-first-row row">
-                    <div class="col-lg-3 text-center">
-                        <a href="index.html"><img src="assets/img/logo-light.svg" alt="" width="88" class="mt-5 mb-5"></a>
+                <div class="row align-items-center pt-2 pb-2">
+                    <div class="col-lg-2 text-center text-lg-left pt-2 pb-2">
+                        <a href="index.html"><img src="assets/img/logo-light.svg" alt="" width="40"></a>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <h5 class="text-muted">Latest news</h5>
-                        <ul class="list-posts">
-                            <li>
-                                <a href="blog-post.html" class="title">How to create effective webdeisign?</a>
-                                <span class="date">February 14, 2015</span>
-                            </li>
-                            <li>
-                                <a href="blog-post.html" class="title">Awesome weekend in Polish mountains!</a>
-                                <span class="date">February 14, 2015</span>
-                            </li>
-                            <li>
-                                <a href="blog-post.html" class="title">How to create effective webdeisign?</a>
-                                <span class="date">February 14, 2015</span>
-                            </li>
-                        </ul>
+                    <div class="col-lg-10 col-md-12 text-center text-lg-right pt-2 pb-2">
+                        <div>Made with ❤️ in Chicago</div>
                     </div>
-                    <div class="col-lg-5 col-md-6">
-                        <h5 class="text-muted">Subscribe Us!</h5>
-                        <!-- MailChimp Form -->
-                        <form action="//suelo.us12.list-manage.com/subscribe/post-json?u=ed47dbfe167d906f2bc46a01b&amp;id=24ac8a22ad" id="sign-up-form" class="sign-up-form validate-form mb-3" method="POST">
-                            <div class="input-group">
-                                <input name="EMAIL" id="mce-EMAIL" type="email" class="form-control" placeholder="Tap your e-mail..." required>
-                                <span class="input-group-btn">
-                                    <button class="btn btn-primary btn-submit" type="submit">
-                                        <span class="description">Subscribe</span>
-                                        <span class="success">
-                                            <svg x="0px" y="0px" viewBox="0 0 32 32"><path stroke-dasharray="19.79 19.79" stroke-dashoffset="19.79" fill="none" stroke="#FFFFFF" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" d="M9,17l3.9,3.9c0.1,0.1,0.2,0.1,0.3,0L23,11"/></svg>
-                                        </span>
-                                        <span class="error">Try again...</span>
-                                    </button>
-                                </span>
-                            </div>
-                        </form>
-                        <h5 class="text-muted mb-3">Social Media</h5>
-                        <a href="#" class="icon icon-social icon-circle icon-sm icon-facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="#" class="icon icon-social icon-circle icon-sm icon-google"><i class="fa fa-google"></i></a>
-                        <a href="#" class="icon icon-social icon-circle icon-sm icon-twitter"><i class="fa fa-twitter"></i></a>
-                        <a href="#" class="icon icon-social icon-circle icon-sm icon-youtube"><i class="fa fa-youtube"></i></a>
-                        <a href="#" class="icon icon-social icon-circle icon-sm icon-instagram"><i class="fa fa-instagram"></i></a>
-                    </div>
-                </div>
-                <!-- Footer 2nd Row -->
-                <div class="footer-second-row">
-                    <span class="text-muted">Copyright Soup 2017©. Made with love by Suelo.</span>
                 </div>
             </div>
-
-            <!-- Back To Top -->
-            <a href="#" id="back-to-top"><i class="ti ti-angle-up"></i></a>
 
         </footer>
         <!-- Footer / End -->
