--- a/sample-page.html
+++ b/sample-page.html
@@ -123,7 +123,7 @@
                                 </p>
                             </div>
 
-                            <div id="menuBurgersContent" class="menu-category-content padded collapse show">
+                            <div id="menuBurgersContent" class="menu-category-content padded">
                                 <div class="row gutters-sm">
                                     <div class="col-lg-4 col-6">
                                         <!-- Menu Item -->
@@ -227,58 +227,60 @@ When making your purchase, please include a message for the hospital staff, your
         <div class="modal-content">
             <div class="modal-header modal-header-lg dark bg-dark">
                 <div class="bg-image"><img src="assets/img/photos/modal-add.jpg" alt=""></div>
-                <h4 class="modal-title">Order Details</h4>
+                <h4 class="modal-title">Buy A Meal For A Healthcare Hero</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="ti-close"></i></button>
             </div>
             <div class="modal-product-details">
                 <div class="row align-items-center">
-                    <div class="col-9">
-                        <h6 class="mb-0">Boscaiola Pasta</h6>
-                        <span class="text-muted">Pasta, Cheese, Tomatoes, Olives</span>
+                    <div class="col-md-12">
+                        <h6 class="mb-1">One Time</h6>
+                        <span class="text-muted">We'll deliver a healthy, nourishing meal on your behalf.</span>
                     </div>
-                    <div class="col-3 text-lg text-right">$9.00</div>
                 </div>
             </div>
             <div class="modal-body panel-details-container">
                 <!-- Panel Details / Size -->
                 <div class="panel-details">
                     <h5 class="panel-details-title">
-                        <label class="custom-control custom-radio">
-                            <input name="radio_title_size" type="radio" class="custom-control-input">
-                            <span class="custom-control-indicator"></span>
-                        </label>
-                        <a href="#panelDetailsSize" data-toggle="collapse">Order</a>
+                        <i class="ti ti-marker-alt"></i>
+                        <span>Your Order</span>
                     </h5>
-                    <div id="panelDetailsSize" class="collapse show">
+                    <div id="panelDetailsSize">
                         <div class="panel-details-content">
-                            <div class="form-group">
-                                <label class="custom-control custom-radio">
-                                    <input name="radio_size" type="radio" class="custom-control-input" checked>
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">1 Meal ($11.00)</span>
-                                </label>
+                            <!-- hi! -->
+                            <div class="form-group row">
+                                <label for="qty" class="col-sm-3 col-form-label">Quantity</label>
+                                <div class="col-sm-9">
+                                    <input name="qty" type="number" value="1" min="1" class="form-control" required>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label class="custom-control custom-radio">
-                                    <input name="radio_size" type="radio" class="custom-control-input">
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">Weekly Meal Subscription ($10.00/week)</span>
-                                </label>
+                            <div class="form-group row">
+                                <label class="col-sm-3 col-form-label">Your e-mail</label>
+                                <div class="col-sm-9">
+                                    <input name="email" type="email" class="form-control" placeholder="username@example.com" required>
+                                </div>
                             </div>
+                            <!-- byte! -->
                         </div>
                     </div>
                 </div>
                 <!-- Panel Details / Other -->
                 <div class="panel-details">
                     <h5 class="panel-details-title">
-                        <label class="custom-control custom-radio">
-                            <input name="radio_title_other" type="radio" class="custom-control-input">
-                            <span class="custom-control-indicator"></span>
-                        </label>
-                        <a href="#panelDetailsOther" data-toggle="collapse">Leave a Personalized Note</a>
+                        <i class="ti ti-thought"></i>
+                        <span>Leave A Personalized Note</span>
                     </h5>
-                    <div id="panelDetailsOther" class="collapse">
-                        <textarea cols="30" rows="4" class="form-control" placeholder="Please leave a note with your name, what part of town you are from, and a message for the healthcare worker who receives this meal!"></textarea>
+                    <div id="panelDetailsOther">
+                        <div class="panel-details-content">
+                            <div class="form-group">
+                                <label class="col-form-label">Your name &amp; what part of town you are from</label>
+                                <input name="nameAndNeighborhood" type="text" class="form-control" placeholder="Eric, Ukranian Village">
+                            </div>
+                            <div class="form-group">
+                                <label>Please leave a message for our healthcare workeres!</label>
+                                <textarea name="message" id="message" cols="30" rows="3" class="form-control"></textarea>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
