--- a/sample-page.html
+++ b/sample-page.html
@@ -318,13 +318,13 @@ When making your purchase, please include a message for the hospital staff, your
       buySingleMealButton.addEventListener('click', function() {
         window.productId = "sku_H0zUx38rUp8z3f"
         let mealFrequencyDisplay = document.getElementById('mealFrequency')
-        mealFrequencyDisplay.innerHTML = "FOOOO"
+        mealFrequencyDisplay.innerHTML = "One Time"
       })
 
       buyWeeklySubscriptionButton.addEventListener('click', function() {
         window.productId = "plan_H0zUtlrL5334RL"
         let mealFrequencyDisplay = document.getElementById('mealFrequency')
-        mealFrequencyDisplay.innerHTML = "BAAAAR"
+        mealFrequencyDisplay.innerHTML = "One Meal Every Week"
       })
 
       var stripe = Stripe('pk_test_1Y5uKjzsmVDJgLrVfab9EqMZ003Obla4ca');
