update success and cancel urls for stripe

--- a/sample-page.html
+++ b/sample-page.html
@@ -338,10 +338,10 @@ When making your purchase, please include a message for the hospital staff, your
           // a successful payment.
           // Instead use one of the strategies described in
           // https://stripe.com/docs/payments/checkout/fulfillment
-          //successUrl: 'http://www.shelter-in-plates.com/sample-page.html',
-          //cancelUrl: 'https://www.shelter-in-plates.com/sample-page.html',
-          successUrl: 'http://localhost:8082/confirmation.html',
-          cancelUrl: 'http://localhost:8082/sample-page.html',
+          successUrl: 'http://www.shelter-in-plates.com/confirmation.html',
+          cancelUrl: 'https://www.shelter-in-plates.com/sample-page.html',
+          // successUrl: 'http://localhost:8082/confirmation.html',
+          // cancelUrl: 'http://localhost:8082/sample-page.html',
         }
 
         let qty = Number(document.getElementsByName('qty')[0].value)
