--- a/sample-page.html
+++ b/sample-page.html
@@ -269,7 +269,7 @@ When making your purchase, please include a message for the hospital staff, your
                                 <input name="nameAndNeighborhood" type="text" class="form-control" placeholder="Eric, Ukranian Village">
                             </div>
                             <div class="form-group">
-                                <label>Please leave a message for our healthcare workeres!</label>
+                                <label>Please leave a message for our healthcare workers!</label>
                                 <textarea name="message" id="message" cols="30" rows="3" class="form-control"></textarea>
                             </div>
                         </div>
