--- a/spoke-and-bird.html
+++ b/spoke-and-bird.html
@@ -362,7 +362,7 @@ When making your purchase, please include a message for the hospital staff, your
           // Instead use one of the strategies described in
           // https://stripe.com/docs/payments/checkout/fulfillment
           successUrl: 'http://www.shelter-in-plates.com/confirmation.html',
-          cancelUrl: 'https://www.shelter-in-plates.com/sample-page.html',
+          cancelUrl: 'https://www.shelter-in-plates.com/spoke-and-bird.html',
           // successUrl: 'http://localhost:8082/confirmation.html',
           // cancelUrl: 'http://localhost:8082/sample-page.html',
         }
